<resources>
    <string name="app_name">madarsoft</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_user">Add User</string>
    <string name="show_users">Show Users</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="jop_title">Jop Title</string>
    <string name="gender">Gender</string>
    <string name="save">Save</string>
</resources>